--- a/SIS_UMS/SIS_UMS/Views/Department/ShowDepartmentsInFaculty.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Department/ShowDepartmentsInFaculty.cshtml
@@ -47,7 +47,8 @@
             </td>
             <td>
                 @Html.ActionLink("Edit Department", "EditDepartment", new { id=item.department_id  }) |
-                @Html.ActionLink("Delete Department", "DeleteDepartment", new { id=item.department_id })
+                @Html.ActionLink("Delete Department", "DeleteDepartment", new { id=item.department_id }) |
+                @Html.ActionLink("Show Majors", "ShowMajorsInDepartment","Major", new { id=item.department_id  })
             </td>
         </tr>
 }
