--- a/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="AllDepartments">All Departments</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Major" asp-action="AllMajors">All Majors</a>
+                        </li>
                     </ul>
                 </div>
             </div>
