--- a/SIS_UMS/SIS_UMS/Views/Department/ShowDepartmentsInFaculty.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Department/ShowDepartmentsInFaculty.cshtml
@@ -7,7 +7,7 @@
 <h1>ShowDepartmentsInAFaculty</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateDepartment">Create New</a>
 </p>
 <table class="table">
     <thead>
