--- a/SIS_UMS/SIS_UMS/Views/Campus/CreateCampus.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Campus/CreateCampus.cshtml
@@ -29,14 +29,14 @@
     <div class="form-group">
         <label asp-for="campus_name" class="control-label col-md-2">Name</label>
         <div class="col-md-10">
-            <input asp-for="campus_name" class="form-control" placeholder="Name" />
+            <input asp-for="campus_name" class="form-control" placeholder="Name" required />
         </div>
     </div>
 
     <div class="form-group">
         <label asp-for="campus_email" class="control-label col-md-2">Email</label>
         <div class="col-md-10">
-            <input asp-for="campus_email" class="form-control" placeholder="Email" />
+            <input asp-for="campus_email" class="form-control" placeholder="Email" required />
         </div>
     </div>
 
